// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Unit Test> Card shold be able to change styles on visibility 1`] = `
<div>
  <div
    class="flex-center-center card cardHidden"
    data-testid="card-2-1"
    style="background-position: -79px -246px;"
  />
</div>
`;

exports[`<Unit Test> Card should be able to render the component 1`] = `
<div>
  <div
    class="flex-center-center card"
    data-testid="card-2-1"
    style="background-position: -79px -246px;"
  />
</div>
`;
